istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-userapi #We configure the gateway
spec:
  selector:
    istio: ingressgateway #using ingressgateway given by istio
  servers:
  - port:
      number: 38791 #Minikube port
      name: http
      protocol: HTTP
    hosts:
    - "127.0.0.1" #localhost
