istio/destination_rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: project-devops-destination-rule  
spec:
  host: project-devops-service #We reuse the service?yml defined in k8s
  subsets:
  - name: v1 #version 1 of the app (tag :latest)
    labels:
      version: v1
  - name: v2 #version 2 of the app (tag: v3)
    labels:
      version: v2
