istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-devops-service
spec:
  hosts:
  - project-devops-service
  http:
  - match:
    - headers:
        version:
          exact: v1
    route:
    - destination:
        host: project-devops-service
        subset: v1
      weight: 40 #We configure the weight for traffic shiffting and routing
  - match:
    - headers:
        version:
          exact: v2
    route:
    - destination:
        host: project-devops-service
        subset: v2
      weight: 60
